Add brands implementations

--- a/PetStore/PetStore.Web/PetStore.Web.csproj
+++ b/PetStore/PetStore.Web/PetStore.Web.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PetStore.Data\PetStore.Data.csproj" />
+    <ProjectReference Include="..\PetStore.Services\PetStore.Services.csproj" />
   </ItemGroup>
 
 </Project>
