Implement Toy and Pet orders

--- a/PetStore/PetStore.Services/PetStore.Services.csproj
+++ b/PetStore/PetStore.Services/PetStore.Services.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\PetStore.Data\PetStore.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Order\" />
+  </ItemGroup>
+
 </Project>
